--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -18,7 +18,7 @@ body {
 }
 
 #card-game{
-    font-family: 'Super Mario Bros. NES', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Super Mario Bros. NES', Tahoma, sans-serif;
 }
 
 nav {
